test/corpus/expressions/arrays.txt
================================================================================
empty
================================================================================
module Test exports (..);

x = [];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array)))

================================================================================
single element
================================================================================
module Test exports (..);

x = [5];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array
      element: (expression_int))))

================================================================================
multiple elements
================================================================================
module Test exports (..);

x = [5, 5, 5, 5];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array
      element: (expression_int)
      element: (expression_int)
      element: (expression_int)
      element: (expression_int))))

================================================================================
trailing comma
================================================================================
module Test exports (..);

x = [5,];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array
      element: (expression_int))))

================================================================================
multiline
================================================================================
module Test exports (..);

x = [
  5,
  5, 
  5,
];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array
      element: (expression_int)
      element: (expression_int)
      element: (expression_int))))

================================================================================
nested
================================================================================
module Test exports (..);

x = [[[[[]]]]];
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_array
      element: (expression_array
        element: (expression_array
          element: (expression_array
            element: (expression_array)))))))
