test/corpus/expressions/constructors.txt
================================================================================
unqualified
================================================================================
module Test exports (..);

x = Foo1_bar234;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_constructor
      (expression_constructor_proper_name))))

================================================================================
qualified
================================================================================
module Test exports (..);

x = SomeModule.Foo1_bar234;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_constructor
      (qualifier)
      (expression_constructor_proper_name))))

================================================================================
trailing underscore
================================================================================
module Test exports (..);

x = Foo_;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_constructor
      (expression_constructor_proper_name))))
