test/corpus/expressions/records/access.txt
================================================================================
single
================================================================================
module Test exports (..);

x = foo.bar;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_access
      (expression_variable
        (expression_variable_name))
      (expression_record_field_label))))

================================================================================
multiple
================================================================================
module Test exports (..);

x = one.two.three.four;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_access
      (expression_record_access
        (expression_record_access
          (expression_variable
            (expression_variable_name))
          (expression_record_field_label))
        (expression_record_field_label))
      (expression_record_field_label))))

================================================================================
multiple explicit associativity
================================================================================
module Test exports (..);

x = ((one.two).three).four;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_access
      (expression_record_access
        (expression_record_access
          (expression_variable
            (expression_variable_name))
          (expression_record_field_label))
        (expression_record_field_label))
      (expression_record_field_label))))

================================================================================
literal
================================================================================
module Test exports (..);

x = {}.foo;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_access
      (expression_record)
      (expression_record_field_label))))

================================================================================
calls
================================================================================
module Test exports (..);

x = foo().bar();
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_call
      function: (expression_record_access
        (expression_call
          function: (expression_variable
            (expression_variable_name))
          arguments: (expression_call_arguments))
        (expression_record_field_label))
      arguments: (expression_call_arguments))))

================================================================================
qualified
================================================================================
module Test exports (..);

x = SomeModule.foo.bar;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_access
      (expression_variable
        (qualifier)
        (expression_variable_name))
      (expression_record_field_label))))
